--- a/index.html
+++ b/index.html
@@ -341,10 +341,9 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 				<div class="col-xl-8 mx-auto">
 					<div class="section-title text-center mb-55">
 						<span class="wow fadeInDown" data-wow-delay=".2s">Servicii</span>
-						<h2 class="mb-15 wow fadeInUp" data-wow-delay=".4s">Our Healthcare Services</h2>
-						<p class="wow fadeInUp" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-							dinonumy
-							<br class="d-none d-lg-block"> eirmod tempor invidunt ut labore et dolore magn.</p>
+						<h2 class="mb-15 wow fadeInUp" data-wow-delay=".4s">Fourmed Warehouse </h2>
+						<p class="wow fadeInUp" data-wow-delay=".6s">
+							Compania Fourmed Warehouse este specializata în depozitarea și distribuția produselor farmaceutic,atat pe plan local, cat si international.</p>
 					</div>
 				</div>
 			</div>
@@ -368,9 +367,8 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 							</svg>
 						</div>
 						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
+							<h4>Distribuție nationala</h4>
+							<p>Distribuim in toata tara medicamente printr-un lant logistic sigur si rapid.</p>
 							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
 						</div>
 						<div class="service-overlay img-bg"></div>
@@ -397,9 +395,8 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 							</svg>
 						</div>
 						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
+							<h4>Export international</h4>
+							<p>Exportam si distribuim si international</p>
 							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
 						</div>
 						<div class="service-overlay img-bg"></div>
@@ -422,83 +419,8 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 							</svg>
 						</div>
 						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
-							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
-						</div>
-						<div class="service-overlay img-bg"></div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-item mb-30">
-						<div class="service-icon mb-25">
-							<svg xmlns="http://www.w3.org/2000/svg" width="48.362" height="58.163" viewBox="0 0 48.362 75.163">
-								<g id="noun_knee_joint_2596276" data-name="noun_knee joint_2596276"
-									transform="translate(-24.199 -12.537)">
-									<path id="Path_72" data-name="Path 72"
-										d="M51.5,87.7H37.1a2.553,2.553,0,0,1-2.4-1.9c-.2-.9-.4-2.1-.6-3.5-.8-4.7-2-11.9-4.9-16-.4-.5-.8-1.1-1.2-1.6a19.145,19.145,0,0,1-2.5-3.6c-.6-1.2-2.6-5.5,0-8.2,3-3.2,6.7-.1,7.8.9l.4.3a19.761,19.761,0,0,0,3.5,2.6c3.4,1.8,7,1.8,11.1,0,.2-.1.5-.2.7-.3a11.717,11.717,0,0,1,3.6-1.2,3.888,3.888,0,0,1,1.9.3A3.509,3.509,0,0,1,56,57.3a5.7,5.7,0,0,1-.3,3.9,28.8,28.8,0,0,1-1.3,3.1l-.3.7a9.492,9.492,0,0,0-.9,2.5c-.9,4.3-.1,14.7.7,17.1a2.817,2.817,0,0,1-.3,2.2A2.723,2.723,0,0,1,51.5,87.7ZM39.2,82.9h9.4c-.7-4.7-1-12.4-.2-16.4A15.943,15.943,0,0,1,49.7,63l.3-.6c.2-.4.3-.8.5-1.2-.1,0-.1.1-.2.1-5.4,2.4-10.6,2.3-15.3-.2a24.907,24.907,0,0,1-4.4-3.2l-.4-.4a5.223,5.223,0,0,0-1.1-.8,10.572,10.572,0,0,0,.7,2.2,13.109,13.109,0,0,0,2,2.8c.5.6.9,1.2,1.4,1.8,3.6,5.1,4.9,12.9,5.7,18C39,82,39.1,82.5,39.2,82.9Zm12.1-24Z"
-										fill="#00adb5" />
-									<path id="Path_73" data-name="Path 73"
-										d="M43.4,54.1a12.078,12.078,0,0,1-7.9-21.2,13.221,13.221,0,0,1,5-2.6,9.459,9.459,0,0,0,3.1-2.1l.1-.1a27.592,27.592,0,0,0,5-5.9,33.949,33.949,0,0,0,3.2-5.6c.3-.7.8-1.6,1.1-2.5a2.443,2.443,0,0,1,3.1-1.4L71,18.3a2.293,2.293,0,0,1,1.5,1.8,2.328,2.328,0,0,1-.8,2.3c-.5.5-1.1,1-1.6,1.5-1.6,1.6-3.2,3.3-4.7,5.1a65.45,65.45,0,0,0-5.8,7.8,51.292,51.292,0,0,0-4.9,9.6,12.347,12.347,0,0,1-6.3,6.8A14.259,14.259,0,0,1,43.4,54.1Zm13.3-36-.3.6a52.992,52.992,0,0,1-3.6,6.2,33.563,33.563,0,0,1-5.9,6.8l-.1.1c-1.3,1.1-2.9,2.6-5,3.1a8.239,8.239,0,0,0-3.1,1.6,7.239,7.239,0,0,0,2.2,12.2,7,7,0,0,0,5.5-.2,7.106,7.106,0,0,0,3.8-4A55.18,55.18,0,0,1,55.6,34a89.346,89.346,0,0,1,6.2-8.3c1.3-1.5,2.6-2.9,3.9-4.3Z"
-										fill="#393e46" />
-								</g>
-							</svg>
-						</div>
-						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
-							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
-						</div>
-						<div class="service-overlay img-bg"></div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-item mb-30">
-						<div class="service-icon mb-25">
-							<svg xmlns="http://www.w3.org/2000/svg" width="43.302" height="58.633" viewBox="0 0 43.302 58.633">
-								<g id="noun_womb_1744327" transform="translate(-22.94 -12.449)">
-									<path id="Path_81" data-name="Path 81"
-										d="M59,49.642V50c0,.434-.868.583-1.167.655a2.227,2.227,0,0,1-1.843-.135,8.716,8.716,0,0,1-1.48-1.252l-1.793-1.7L51.68,46.526a.755.755,0,1,0-1.067,1.067A4.98,4.98,0,0,1,52.2,50.439c.192,1.722-1.423,3.223-2.782,3.963a12.192,12.192,0,0,1-5.841,1.124,7.947,7.947,0,0,1-5.635-2.277A17.36,17.36,0,0,1,33.673,46.4a7.57,7.57,0,0,1-.384-2.355v-.064a2.583,2.583,0,0,0-.975-1.971A6.88,6.88,0,1,1,43.427,35.22a7.115,7.115,0,0,1,.043,2.618A1.515,1.515,0,0,1,41.7,39.048l-.178-.043a5.329,5.329,0,0,0-1.473-.213H39.2a.754.754,0,0,0-.761.6.711.711,0,0,0,.711.854h.9a3.643,3.643,0,0,1,1.85.512l.512.313.406.228.27.157a.711.711,0,0,0,.9-.121l1-1.025a.953.953,0,0,1,1.323-.1.968.968,0,0,1,.27,1.124l-.939,2.8a1.615,1.615,0,0,1-1.53,1.1H42.695a.861.861,0,0,0,0,1.715h2.013a3.1,3.1,0,0,0,2.938-2.134l.975-3.095a2.277,2.277,0,0,1,2.213-1.594h.036a2.191,2.191,0,0,1,1.885,1.06l3.778,6.311a3.458,3.458,0,0,0,1.878,1.416A.776.776,0,0,1,59,49.642Z"
-										transform="translate(-0.985 -4.655)" fill="#00adb5" />
-									<path id="Path_82" data-name="Path 82"
-										d="M66.242,34.145A21.651,21.651,0,1,0,26.177,45.49h0l.183.256a23.146,23.146,0,0,0,1.582,2.2L44.569,71.082,61.247,47.973a20.214,20.214,0,0,0,1.582-2.2l.183-.249h0A21.461,21.461,0,0,0,66.242,34.145Zm-39.991-.051A18.311,18.311,0,0,1,58.786,22.528a1.714,1.714,0,0,1-.842.168,3.171,3.171,0,0,0-3.281,3.281A1.3,1.3,0,0,1,53.2,27.443a3.164,3.164,0,0,0-3.274,3.274,1.3,1.3,0,0,1-1.465,1.465,3.171,3.171,0,0,0-2.351.923.953.953,0,0,0,1.348,1.348,1.34,1.34,0,0,1,1.091-.359A3.157,3.157,0,0,0,51.82,30.82a1.3,1.3,0,0,1,1.465-1.465,3.164,3.164,0,0,0,3.281-3.318,1.3,1.3,0,0,1,1.465-1.465,3.369,3.369,0,0,0,1.875-.535A18.311,18.311,0,1,1,26.251,34.094Z"
-										fill="#393e46" />
-									<path id="Path_83" data-name="Path 83"
-										d="M59.013,49.974v-.356a.776.776,0,0,0-.62-.712,3.462,3.462,0,0,1-1.838-1.475L52.78,41.084a2.194,2.194,0,0,0-1.888-1.061h-.036a2.28,2.28,0,0,0-2.215,1.6l-.983,3.1a3.106,3.106,0,0,1-2.942,2.137H42.7a.862.862,0,0,1,0-1.717h1.425a1.617,1.617,0,0,0,1.532-1.1l.926-2.743a.969.969,0,0,0-.271-1.126.955.955,0,0,0-1.339.114l-.99,1.012a.712.712,0,0,1-.9.121l-.264-.121-.406-.228-.513-.313a3.647,3.647,0,0,0-1.852-.513h-.862a.712.712,0,0,1-.712-.855.755.755,0,0,1,.712-.648h.826a5.336,5.336,0,0,1,1.475.214l.178.043a1.517,1.517,0,0,0,1.8-1.2,7.124,7.124,0,0,0-.036-2.622,6.91,6.91,0,1,0-11.1,6.775,2.586,2.586,0,0,1,.976,1.973v.064a7.58,7.58,0,0,0,.385,2.358,17.382,17.382,0,0,0,4.274,6.853,7.957,7.957,0,0,0,5.642,2.28,12.14,12.14,0,0,0,5.849-1.126c1.368-.712,2.978-2.244,2.785-3.968a4.987,4.987,0,0,0-1.589-2.849.756.756,0,1,1,1.069-1.069l1,1.069,1.76,1.7a8.727,8.727,0,0,0,1.482,1.254,2.23,2.23,0,0,0,1.845.135C58.144,50.558,59.013,50.4,59.013,49.974Z"
-										transform="translate(-0.997 -4.602)" fill="#00adb5" />
-								</g>
-							</svg>
-						</div>
-						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
-							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
-						</div>
-						<div class="service-overlay img-bg"></div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="service-item mb-30">
-						<div class="service-icon mb-25">
-							<svg id="noun_dental_care_2692540" data-name="noun_dental care_2692540" xmlns="http://www.w3.org/2000/svg"
-								width="70.285" height="58.102" viewBox="0 0 70.285 58.102">
-								<g id="Group_156" data-name="Group 156">
-									<path id="Path_84" data-name="Path 84"
-										d="M17.336,17C14.2,22.319,7.223,26.405,0,27.04c0,13.45,3.61,28.3,17.337,32.13C31.061,55.34,34.674,40.489,34.674,27.04,27.373,25.929,20.467,22.319,17.336,17Zm0,37.576c-8.564-2.144-13-15.642-13-24.21,3.65-.224,10.44-2.565,13-7.149,2.561,4.584,9.352,6.925,13,7.149C30.338,38.934,25.9,52.432,17.337,54.576Zm2.144-17.593V32.655h-4.33v4.329h-4.33v4.33h4.33v4.33h4.33v-4.33h4.33v-4.33Z"
-										transform="translate(0 -1.069)" fill="#393e46" />
-									<path id="Path_85" data-name="Path 85"
-										d="M72.777,7.735a7.668,7.668,0,0,0-2.063-5.6A7.393,7.393,0,0,0,66.72.127,8.515,8.515,0,0,0,65.246,0c-3.365.066-5.6,1.62-9.029,1.58C52.784,1.62,50.545.066,47.185,0a8.411,8.411,0,0,0-1.476.126,7.4,7.4,0,0,0-3.994,2.011,7.667,7.667,0,0,0-2.065,5.6A19.9,19.9,0,0,0,44,20.6a21.726,21.726,0,0,0-.974,6.388,17.447,17.447,0,0,0,1.408,7.128,8.114,8.114,0,0,0,1.477,2.28,3.178,3.178,0,0,0,2.136,1.085v0h.06l.078,0A2.689,2.689,0,0,0,50.2,36.391a11.413,11.413,0,0,0,1.632-3.6c.652-2.094,1.256-4.552,2.039-6.379a7.347,7.347,0,0,1,1.236-2.087,1.47,1.47,0,0,1,1.107-.573c.538-.008,1.086.351,1.761,1.486a35.937,35.937,0,0,1,2.431,6.94A19.3,19.3,0,0,0,61.652,35.5a4.76,4.76,0,0,0,.947,1.289,2.508,2.508,0,0,0,1.652.7H64.3A3.164,3.164,0,0,0,66.519,36.4c1.664-1.776,2.854-5.148,2.886-9.41a21.74,21.74,0,0,0-.974-6.387A19.876,19.876,0,0,0,72.777,7.735ZM65.619,33.029a5.612,5.612,0,0,1-.982,1.551,1.632,1.632,0,0,1-.305.255,6.733,6.733,0,0,1-.978-2.028c-.664-1.912-1.28-4.633-2.2-6.964A10.906,10.906,0,0,0,59.382,22.7a4.163,4.163,0,0,0-3.167-1.568h0a4.787,4.787,0,0,0-4.026,2.79c-1.262,2.2-1.954,5.131-2.675,7.507a17.169,17.169,0,0,1-1.048,2.844,2.546,2.546,0,0,1-.376.561,2.072,2.072,0,0,1-.474-.45c-.927-1.091-2-3.925-1.977-7.4A19.133,19.133,0,0,1,46.7,20.754a1.3,1.3,0,0,0-.236-1.273A17.2,17.2,0,0,1,42.268,7.737a5.021,5.021,0,0,1,1.3-3.753,4.794,4.794,0,0,1,2.587-1.277,5.972,5.972,0,0,1,1.028-.09c2.294-.066,4.822,1.541,9.031,1.58,4.206-.039,6.731-1.646,9.029-1.58a6.188,6.188,0,0,1,1.026.088,4.789,4.789,0,0,1,2.586,1.279,5.021,5.021,0,0,1,1.3,3.753,17.2,17.2,0,0,1-4.194,11.744,1.312,1.312,0,0,0-.239,1.273,19.049,19.049,0,0,1,1.06,6.236A14.968,14.968,0,0,1,65.619,33.029Z"
-										transform="translate(-2.493 0)" fill="#00adb5" />
-								</g>
-							</svg>
-						</div>
-						<div class="service-content">
-							<h4>Serviciu 1</h4>
-							<p>Lorem ipsum dolor sit amet, consetet
-								sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
+							<h4>Deschisi catre colaborari</h4>
+							<p>Suntem deschisi sa colaboram pe termen mediu si lung</p>
 							<a href="#" class="read-more">Read More <i class="lni lni-arrow-right"></i></a>
 						</div>
 						<div class="service-overlay img-bg"></div>
@@ -510,7 +432,7 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 	<!--========================= service-section end ========================= -->
 
 	<!-- ========================= testimonial-section start ========================= -->
-	<!-- <section id="testimonial" class="team-section pt-150 pb-150">
+	<section id="testimonial" class="team-section pt-150 pb-150">
 		<div class="shape shape-5">
 			<img src="assets/img/shapes/shape-2.svg" alt="">
 		</div>
@@ -521,15 +443,15 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 			<div class="row">
 				<div class="col-xl-8 mx-auto">
 					<div class="section-title text-center mb-55">
-						<span class="wow fadeInDown" data-wow-delay=".2s">Informatii pe care nu le-am punctat </span>
-						<h2 class="mb-15 wow fadeInUp" data-wow-delay=".4s">Si vreti sa le adaugati</h2>
-						<p class="wow fadeInUp" data-wow-delay=".6s">fsfsf24242424242rsfsfsfsfsfsfs <br/></p></br>
-						<a href="https://rebrand.ly/medic-ud" rel="nofollow" class="btn theme-btn">Contactează-ne</a>
+						<span class="wow fadeInDown" data-wow-delay=".2s">Echipa </span>
+						<h4 class="mb-15 wow fadeInUp" data-wow-delay=".4s"> Echipa Fourmed Warehouse este o echipa tanara, formata din oameni cu experienta de peste 10 ani in industria farmaceutica, cu cunostinte si studii necesare atat in vanzari, cat si in domeniu farmaceutic</h4>
+						<p class="wow fadeInUp" data-wow-delay=".6s"> <br/></p></br>
+						<a href="tel:+40730245430" rel="nofollow" class="btn theme-btn">Contactează-ne</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- ========================= testimonial-section end ========================= -->
 
 
@@ -545,19 +467,17 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 				<div class="col-xl-7">
 					<div class="section-title">
 						<h2 class="mb-15">Contact</h2>
-						<p class="mb-35">Lorem ipsum dolor sit amet, consetetur sadiping elitr, sed dinonumy <br
-								class="d-none d-lg-block"> eirmod tempor invidunt ut labore.</p>
+						<p class="mb-35">Compania Fourmed Warehouse este specializata în depozitarea și distribuția produselor farmaceutic,atat pe plan local, cat si international.</p>
 					</div>
 				</div>
 			</div>
 			<div id="contact" class="row">
 				<div class="col-xl-8">
 					<div class="subscribe-wrapper">
-						<form action="#" class="subscribe-from">
-							<input type="text" name="subscribe" id="subscribe" placeholder="Email">
-							<input type="text" name="subscribe" id="subscribe" placeholder="Telefon">
-							<input type="text" name="subscribe" id="subscribe" placeholder="Mesaj">
-							<button class="btn theme-btn">Trimite mesaj</button>
+						<form  action="https://formspree.io/f/mgernrlr"
+  method="POST" class="subscribe-from">
+							<input type="text" name="email-client" id="subscribe" placeholder="Email">
+							<button type="submit" class="btn theme-btn">Trimite mesaj</button>
 						</form>
 						<div class="support d-flex">
 							<div class="support-icon">
@@ -603,9 +523,8 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 					<div class="col-xl-4 col-lg-5 col-md-6">
 						<div class="footer-widget mb-30">
 							<a href="index.html" class="logo"><img src="assets/img/logo/logo.svg" alt=""></a>
-							<p>Lorem ipsum dolor serit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-								labore dolore magna
-								aliquyam erat diam voluptua.</p>
+							<p>Compania Fourmed Warehouse este specializata în depozitarea și distribuția produselor farmaceutic,atat pe plan local, cat si international.
+ Fourmed Warehouse este un furnizor autorizat de produse farmaceutice aprobat de ANMDM, îndeplinind standardele și reglementările europene aflate in vigoare.</p>
 							
 						</div>
 					</div>
