--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 						<form  action="https://formspree.io/f/mgernrlr"
   method="POST" class="subscribe-from">
 							<input type="text" name="email-client" id="subscribe" placeholder="Email">
+							<input type="text" name="message" id="message" placeholder="Message">
 							<button type="submit" class="btn theme-btn">Trimite mesaj</button>
 						</form>
 						<div class="support d-flex">
