--- a/index-english.html
+++ b/index-english.html
@@ -532,7 +532,7 @@ Fourmed Warehouse specializes in the storage and distribution of pharmaceutical 
 						<div class="footer-widget mb-30">
 							<h4>Location</h4>
 							<div class="map-canvas">
-							<iframe width="588" height="204" id="gmap_canvas" src="https://maps.google.com/maps?q=%20%C8%98oseaua%20Industrial%C4%83%20nr.%206A,%20Cump%C4%83na%20907105&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+							<iframe width="588" height="204" id="gmap_canvas" src="https://maps.google.com/maps?q=Fourmed%20Warehouse%20SRL&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 							</div>
 						</div>
 					</div>
