--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
 						<div class="footer-widget mb-30">
 							<h4>Locatie</h4>
 							<div class="map-canvas">
-							<iframe width="588" height="204" id="gmap_canvas" src="https://maps.google.com/maps?q=%20%C8%98oseaua%20Industrial%C4%83%20nr.%206A,%20Cump%C4%83na%20907105&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+							<iframe width="588" height="204" id="gmap_canvas" src="https://maps.google.com/maps?q=Fourmed%20Warehouse%20SRL&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 							</div>
 						</div>
 					</div>
