--- a/index.html
+++ b/index.html
@@ -528,12 +528,22 @@ Bazele legale ale eliberării autorizației sunt: Legea 95/2006 privind reforma 
  Fourmed Warehouse este un furnizor autorizat de produse farmaceutice aprobat de ANMDM, îndeplinind standardele și reglementările europene aflate in vigoare.</p>
 							
 						</div>
+						        <a style="padding-top: 5px;"
+                  href="https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home2.show&lng=RO"
+                >
+                  <img src="assets/img/anpc-sol.png"
+                /></a>
+                <a href="https://anpc.ro/ce-este-sal/">
+                  <img
+                    style="padding-top: 20px"
+                    src="assets/img/anpc-sal.png"
+                /></a>
 					</div>
 					<div class="col-xl-4 col-lg-12 col-md-7">
 						<div class="footer-widget mb-30">
 							<h4>Locatie</h4>
 							<div class="map-canvas">
-							<iframe width="588" height="204" id="gmap_canvas" src="https://maps.google.com/maps?q=Fourmed%20Warehouse%20SRL&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+							<iframe width="588" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Fourmed%20Warehouse%20SRL&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 							</div>
 						</div>
 					</div>
